--- a/app/src/main/res/layout/fragment_k_y_c.xml
+++ b/app/src/main/res/layout/fragment_k_y_c.xml
@@ -98,6 +98,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_user_pan_number" />
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/tv_usere_voter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
