--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -13,26 +13,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/img_welcomebase"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/marign30dp"
-            android:contentDescription="@string/image"
-            android:src="@drawable/spidpay_logo" />
+
 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true"
             android:layout_marginLeft="@dimen/marign20dp"
             android:layout_marginRight="@dimen/marign20dp"
             android:layout_marginBottom="@dimen/marign20dp"
             android:orientation="vertical">
 
+            <ImageView
+                android:layout_gravity="center"
+                android:id="@+id/img_welcomebase"
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/marign30dp"
+                android:contentDescription="@string/image"
+                android:src="@drawable/spidpay_logo" />
+
+
             <TextView
+                android:layout_marginTop="@dimen/marign30dp"
                 android:id="@+id/tv_loginemail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -44,11 +49,12 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
+
                 android:id="@+id/txtinput_login_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign15dp"
+                android:layout_marginTop="@dimen/marign20dp"
                 android:layout_marginEnd="@dimen/marign20dp"
                 app:endIconMode="password_toggle"
                 app:hintEnabled="false"
@@ -137,9 +143,9 @@
                 android:id="@+id/btn_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign15dp"
-                android:layout_marginTop="@dimen/marign20dp"
-                android:layout_marginEnd="@dimen/marign15dp"
+                android:layout_marginStart="@dimen/marign20dp"
+                android:layout_marginTop="@dimen/marign30dp"
+                android:layout_marginEnd="@dimen/marign20dp"
                 android:background="@drawable/button_bg_green"
                 android:fontFamily="@font/lato"
                 android:onClick="@{(v)->changepasswordviewmodel.validateChangePassField(v)}"
