--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="termsncondtion">#4483EE</color>
     <color name="darkgrey">#A9A9A9</color>
     <color name="darkgrey2">#8E8A90</color>
-
+    <color name="tradewallet_grey">#ECF1FA</color>
     <color name="lightgrey">#D1D1D1</color>
     <color name="border_color">#50D1D1D1</color>
     <color name="shadeslightgrey">#30DCDCDC</color>
