--- a/app/src/main/res/layout/activity_get_all_transaction_by_wallet_id.xml
+++ b/app/src/main/res/layout/activity_get_all_transaction_by_wallet_id.xml
@@ -29,16 +29,16 @@
 
             <TextView
 
-                android:text="@string/spidpaywallet"
-                android:fontFamily="@font/lato_bold"
-                android:layout_marginLeft="@dimen/marign10dp"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/img_backpress"
                 android:id="@+id/tv_page_title"
-                android:textSize="@dimen/marign18sp"
-                android:textColor="@color/page_heading_color"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/marign10dp"
+                android:layout_toRightOf="@+id/img_backpress"
+                android:fontFamily="@font/lato_bold"
+                android:text="@string/spidpaywallet"
+                android:textColor="@color/page_heading_color"
+                android:textSize="@dimen/marign18sp" />
 
 
         </RelativeLayout>
