--- a/app/src/main/res/layout/activity_dmt_trasfer_money.xml
+++ b/app/src/main/res/layout/activity_dmt_trasfer_money.xml
@@ -90,6 +90,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_sendermobilenumber">
 
             <EditText
+                android:maxLength="10"
                 android:id="@+id/edt_cash_deposit_amount"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -101,7 +102,6 @@
                 android:paddingTop="@dimen/marign15dp"
                 android:paddingRight="@dimen/marign10dp"
                 android:paddingBottom="@dimen/marign15dp"
-
                 android:textColorHint="@color/lightgrey" />
 
         </LinearLayout>
