--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -90,6 +90,7 @@
                     android:drawableEnd="@drawable/country_code_arrow"
                     android:focusable="false"
                     android:gravity="center_vertical"
+                    android:importantForAutofill="no"
                     android:inputType="number"
                     android:maxLength="10"
                     android:paddingLeft="@dimen/marign10dp"
@@ -98,8 +99,7 @@
                     android:paddingBottom="@dimen/marign10dp"
                     android:text="@string/indiacountrycode"
                     android:textColor="@color/purple_200"
-                    android:textColorHint="@color/lightgrey"
-                    android:importantForAutofill="no" />
+                    android:textColorHint="@color/lightgrey" />
 
 
             </LinearLayout>
@@ -117,6 +117,7 @@
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
                     android:hint="@string/mobileno"
+                    android:importantForAutofill="no"
                     android:inputType="number"
                     android:maxLength="10"
                     android:paddingStart="@dimen/marign5dp"
@@ -126,8 +127,7 @@
                     android:singleLine="true"
                     android:text="@={login_viewmodel.mobile_number}"
                     android:textColorHint="@color/lightgrey"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:importantForAutofill="no" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
                     android:id="@+id/img_cleare_login_mobilenumber"
@@ -137,14 +137,14 @@
                     android:layout_centerVertical="true"
                     android:layout_gravity="center"
                     android:layout_marginEnd="@dimen/marign10dp"
+                    android:contentDescription="TODO"
                     android:focusable="false"
                     android:onClick="@{()->login_viewmodel.update_mobile_number()}"
                     android:src="@drawable/clear_field"
                     android:visibility="@{login_viewmodel.mboolean_mobile_number ? View.VISIBLE : View.GONE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:contentDescription="TODO" />
+                    app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -157,12 +157,12 @@
             android:layout_marginStart="@dimen/marign20dp"
             android:layout_marginTop="@dimen/marign15dp"
             android:layout_marginEnd="@dimen/marign20dp"
+            app:endIconMode="password_toggle"
             app:hintEnabled="false"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linear_mobile_number"
-            app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
-            app:endIconMode="password_toggle">
+            app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24">
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/edt_loginpassword"
@@ -171,8 +171,8 @@
                 android:background="@drawable/edittext_shadow"
                 android:gravity="center_vertical"
                 android:hint="@string/password"
-                android:maxLength="20"
                 android:inputType="textPassword"
+                android:maxLength="20"
                 android:paddingStart="@dimen/marign15dp"
                 android:paddingEnd="@dimen/marign10dp"
                 android:text="@={login_viewmodel.password}"
@@ -218,42 +218,55 @@
             app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
 
-        <TextView
-            android:id="@+id/tv_signup"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/marign30dp"
-            android:fontFamily="@font/lato_bold"
-            android:gravity="center"
-            android:paddingStart="@dimen/marign40dp"
-            android:paddingEnd="@dimen/marign40dp"
-            android:text="@string/signup_txt"
-            android:textColor="@color/darkgrey2"
-            android:textSize="@dimen/marign18sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_loginforgotpass" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_loginforgotpass">
 
-        <TextView
-            android:id="@+id/tv_termsncondtion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center"
-            android:paddingBottom="@dimen/marign20dp"
+            <TextView
+                android:id="@+id/tv_signup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="@dimen/marign40dp"
+                android:layout_marginTop="@dimen/marign30dp"
+                android:layout_marginEnd="@dimen/marign40dp"
+                android:fontFamily="@font/lato_bold"
+                android:gravity="center"
+                android:text="@string/signup_txt"
+                android:textColor="@color/darkgrey2"
+                android:textSize="@dimen/marign18sp" />
+
+
+        </RelativeLayout>
+
+        <RelativeLayout
             android:layout_marginTop="@dimen/marign20dp"
-            android:layout_marginBottom="@dimen/marign15dp"
-            android:fontFamily="@font/lato_bold"
-            android:gravity="center"
-            android:paddingStart="@dimen/marign15dp"
-            android:paddingEnd="@dimen/marign15dp"
-            android:text="@string/dashboard_txt3"
-            android:textColor="@color/black"
-            android:textSize="@dimen/marign18sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent">
+
+            <TextView
+                android:id="@+id/tv_termsncondtion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="@dimen/marign15dp"
+                android:fontFamily="@font/lato_bold"
+                android:gravity="center"
+                android:layout_marginStart="@dimen/marign30dp"
+                android:layout_marginEnd="@dimen/marign30dp"
+                android:paddingStart="@dimen/marign15dp"
+                android:paddingEnd="@dimen/marign15dp"
+                android:text="@string/dashboard_txt3"
+                android:textColor="@color/black"
+                android:textSize="@dimen/marign18sp" />
+
+        </RelativeLayout>
 
 
         <ProgressBar
