--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
+
         <variable
             name="register_viewmodel"
             type="com.example.spidpay.ui.signup.RegisterViewModel" />
@@ -67,13 +69,13 @@
                     android:drawableRight="@drawable/ic_baseline_keyboard_arrow_down_24"
                     android:focusable="false"
                     android:hint="@string/inrestedfor"
+                    android:importantForAutofill="no"
                     android:inputType="text"
                     android:paddingLeft="@dimen/marign10dp"
                     android:paddingTop="@dimen/marign10dp"
                     android:paddingRight="@dimen/marign10dp"
                     android:paddingBottom="@dimen/marign10dp"
-                    android:textColorHint="@color/lightgrey"
-                    android:importantForAutofill="no" />
+                    android:textColorHint="@color/lightgrey" />
 
 
             </LinearLayout>
@@ -98,6 +100,7 @@
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
                     android:hint="@string/firstname"
+                    android:importantForAutofill="no"
                     android:inputType="text"
                     android:maxLength="50"
                     android:paddingLeft="@dimen/marign10dp"
@@ -105,8 +108,7 @@
                     android:paddingRight="@dimen/marign10dp"
                     android:paddingBottom="@dimen/marign10dp"
                     android:text="@{register_viewmodel.string_register_first_name}"
-                    android:textColorHint="@color/lightgrey"
-                    android:importantForAutofill="no" />
+                    android:textColorHint="@color/lightgrey" />
 
                 <ImageView
                     android:id="@+id/img_clear_register_firstname"
@@ -114,14 +116,14 @@
                     android:layout_height="@dimen/marign20dp"
                     android:layout_gravity="center"
                     android:layout_marginEnd="@dimen/marign10dp"
+                    android:contentDescription="TODO"
                     android:focusable="false"
                     android:onClick="@{()->register_viewmodel.clear_first_name()}"
                     android:src="@drawable/clear_field"
                     android:visibility="@{register_viewmodel.string_register_first_name.length()>0 ? View.VISIBLE : View.GONE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:contentDescription="TODO" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
 
             </LinearLayout>
@@ -145,6 +147,7 @@
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
                     android:hint="@string/lastname"
+                    android:importantForAutofill="no"
                     android:inputType="text"
                     android:maxLength="50"
                     android:paddingLeft="@dimen/marign10dp"
@@ -152,8 +155,7 @@
                     android:paddingRight="@dimen/marign10dp"
                     android:paddingBottom="@dimen/marign10dp"
                     android:text="@{register_viewmodel.string_register_last_name}"
-                    android:textColorHint="@color/lightgrey"
-                    android:importantForAutofill="no" />
+                    android:textColorHint="@color/lightgrey" />
 
                 <ImageView
                     android:id="@+id/img_clear_register_lastname"
@@ -161,14 +163,14 @@
                     android:layout_height="@dimen/marign20dp"
                     android:layout_gravity="center"
                     android:layout_marginEnd="@dimen/marign10dp"
+                    android:contentDescription="TODO"
                     android:focusable="false"
                     android:onClick="@{()->register_viewmodel.clear_last_name()}"
                     android:src="@drawable/clear_field"
                     android:visibility="@{register_viewmodel.string_register_last_name.length()>0 ? View.VISIBLE : View.GONE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:contentDescription="TODO" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
 
             </LinearLayout>
@@ -192,6 +194,7 @@
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
                     android:hint="@string/mobileno"
+                    android:importantForAutofill="no"
                     android:inputType="number"
                     android:maxLength="10"
                     android:paddingLeft="@dimen/marign10dp"
@@ -199,8 +202,7 @@
                     android:paddingRight="@dimen/marign10dp"
                     android:paddingBottom="@dimen/marign10dp"
                     android:text="@={register_viewmodel.string_register_mobile_number}"
-                    android:textColorHint="@color/lightgrey"
-                    android:importantForAutofill="no" />
+                    android:textColorHint="@color/lightgrey" />
 
 
                 <ImageView
@@ -209,13 +211,13 @@
                     android:layout_height="@dimen/marign20dp"
                     android:layout_gravity="center"
                     android:layout_marginEnd="@dimen/marign10dp"
+                    android:contentDescription="TODO"
                     android:focusable="false"
                     android:onClick="@{()->register_viewmodel.clear_mobile_number()}"
                     android:src="@drawable/clear_field"
                     android:visibility="@{register_viewmodel.string_register_mobile_number.length()>0 ? View.VISIBLE : View.GONE}"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:contentDescription="TODO" />
+                    app:layout_constraintEnd_toEndOf="parent" />
 
             </LinearLayout>
 
@@ -238,14 +240,14 @@
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
                     android:hint="@string/email"
+                    android:importantForAutofill="no"
                     android:inputType="textEmailAddress"
                     android:paddingLeft="@dimen/marign10dp"
                     android:paddingTop="@dimen/marign10dp"
                     android:paddingRight="@dimen/marign10dp"
                     android:paddingBottom="@dimen/marign10dp"
                     android:text="@={register_viewmodel.string_register_email_Address}"
-                    android:textColorHint="@color/lightgrey"
-                    android:importantForAutofill="no" />
+                    android:textColorHint="@color/lightgrey" />
 
 
                 <ImageView
@@ -254,21 +256,18 @@
                     android:layout_height="@dimen/marign20dp"
                     android:layout_gravity="center"
                     android:layout_marginEnd="@dimen/marign10dp"
+                    android:contentDescription="TODO"
                     android:focusable="false"
                     android:onClick="@{()->register_viewmodel.clear_email()}"
                     android:src="@drawable/clear_field"
                     android:visibility="@{register_viewmodel.string_register_email_Address.length()>0 ? View.VISIBLE : View.GONE}"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:contentDescription="TODO" />
+                    app:layout_constraintEnd_toEndOf="parent" />
 
             </LinearLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/linear_signup_password"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linear_signup_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/marign20dp"
@@ -276,22 +275,24 @@
                 android:layout_marginEnd="@dimen/marign20dp"
                 app:endIconMode="password_toggle"
                 app:hintEnabled="false"
-                app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
-                >
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linear_signup_email"
+                app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24">
 
                 <androidx.appcompat.widget.AppCompatEditText
-                    android:gravity="center_vertical"
-                    android:maxLength="20"
                     android:id="@+id/edt_loginpassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edittext_shadow"
+                    android:gravity="center_vertical"
                     android:hint="@string/password"
-                    android:text="@={register_viewmodel.password}"
                     android:inputType="textPassword"
-                    android:singleLine="true"
+                    android:maxLength="20"
                     android:paddingStart="@dimen/marign15dp"
                     android:paddingEnd="@dimen/marign10dp"
+                    android:singleLine="true"
+                    android:text="@={register_viewmodel.password}"
                     app:hintEnabled="false" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -303,12 +304,12 @@
                 android:layout_marginStart="@dimen/marign20dp"
                 android:layout_marginTop="@dimen/marign15dp"
                 android:layout_marginEnd="@dimen/marign20dp"
+                app:endIconMode="password_toggle"
                 app:hintEnabled="false"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linear_signup_password"
-                app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
-                app:endIconMode="password_toggle">
+                app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24">
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/edt_signup_confirm_password"
@@ -319,9 +320,9 @@
 
                     android:inputType="textPassword"
                     android:paddingStart="@dimen/marign15dp"
-                    android:singleLine="true"
-
                     android:paddingEnd="@dimen/marign10dp"
+
+                    android:singleLine="true"
                     android:text="@={register_viewmodel.confirm_password}"
                     app:hintEnabled="false" />
 
@@ -345,56 +346,71 @@
                 android:textSize="@dimen/marign18sp"
                 app:layout_constraintTop_toBottomOf="@+id/linear_signup_confirm_password" />
 
-
-            <TextView
-                android:id="@+id/tv_login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/marign20dp"
-                android:fontFamily="@font/lato_bold"
-                android:gravity="center"
-                android:paddingLeft="@dimen/marign15dp"
-                android:paddingRight="@dimen/marign15dp"
-                android:text="@string/signup_txt2"
-                android:textColor="@color/dark_blue"
-                android:textSize="@dimen/marign18sp"
+            <RelativeLayout
+                android:id="@+id/relative_login"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_register" />
+                app:layout_constraintTop_toBottomOf="@+id/btn_register"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_centerHorizontal="true"
+                    android:id="@+id/tv_login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/marign20dp"
+                    android:fontFamily="@font/lato_bold"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:paddingLeft="@dimen/marign15dp"
+                    android:paddingRight="@dimen/marign15dp"
+                    android:text="@string/signup_txt2"
+                    android:textColor="@color/dark_blue"
+                    android:textSize="@dimen/marign18sp"
+                     />
+
+            </RelativeLayout>
 
 
-            <TextView
-                android:id="@+id/tv_termsncondtion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center"
-                android:paddingBottom="@dimen/marign20dp"
+
+            <RelativeLayout
                 android:layout_marginTop="@dimen/marign20dp"
-                android:layout_marginBottom="@dimen/marign15dp"
-                android:fontFamily="@font/lato"
-                android:gravity="center"
-                android:paddingStart="@dimen/marign10dp"
-                android:paddingEnd="@dimen/marign10dp"
-                android:text="@string/dashboard_txt3"
-                android:textColor="@color/black"
-                android:textSize="@dimen/marign18sp"
-                app:layout_constraintTop_toBottomOf="@+id/tv_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent" />
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/relative_login">
+
+                <TextView
+                    android:id="@+id/tv_termsncondtion"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="@dimen/marign30dp"
+                    android:layout_marginEnd="@dimen/marign30dp"
+                    android:fontFamily="@font/lato"
+                    android:gravity="center"
+                    android:paddingStart="@dimen/marign40dp"
+                    android:paddingEnd="@dimen/marign40dp"
+                    android:paddingBottom="@dimen/marign20dp"
+                    android:text="@string/dashboard_txt3"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/marign18sp" />
+
+            </RelativeLayout>
 
 
             <ProgressBar
-                android:visibility="gone"
                 android:id="@+id/pb_login"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
