some bug solved 17-10-2021 pt2

--- a/app/src/main/res/layout/landingfragment.xml
+++ b/app/src/main/res/layout/landingfragment.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+
+        <import type="android.view.View" />
+
+        <variable
+            name="pref"
+            type="com.example.spidpay.util.PrefManager" />
 
         <variable
             name="landingviewmodel"
@@ -88,13 +95,15 @@
 
                     <ImageView
                         android:id="@+id/img_mainwallet_popoup"
+
                         android:layout_width="@dimen/marign20dp"
                         android:layout_height="@dimen/marign20dp"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentBottom="true"
                         android:contentDescription="TODO"
                         android:onClick="@{(v)->landingviewmodel.openAllTransactionAcivity(v,wallet.get(1).walletId,wallet.get(1).walletBalance,`SP`,false)}"
-                        android:src="@drawable/ic_baseline_arrow_forward_24" />
+                        android:src="@drawable/ic_baseline_arrow_forward_24"
+                        android:visibility="@{pref.getKYCPending() ? View.VISIBLE : View.GONE,default=gone}" />
 
 
                 </RelativeLayout>
@@ -149,7 +158,8 @@
                         android:layout_alignParentBottom="true"
                         android:contentDescription="TODO"
                         android:onClick="@{(v)->landingviewmodel.openAllTransactionAcivity(v,wallet.get(0).walletId,wallet.get(0).walletBalance,`Trade`,true)}"
-                        android:src="@drawable/ic_baseline_arrow_forward_24" />
+                        android:src="@drawable/ic_baseline_arrow_forward_24"
+                        android:visibility="@{pref.getKYCPending() ? View.VISIBLE : View.GONE,default=gone}" />
 
                 </RelativeLayout>
 
