--- a/app/src/main/res/layout/activity_get_all_transaction_by_wallet_id.xml
+++ b/app/src/main/res/layout/activity_get_all_transaction_by_wallet_id.xml
@@ -119,6 +119,7 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginBottom="@dimen/marign30dp"
             android:id="@+id/rv_all_transaction"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
